# CLionProjects

./: README.md
OStests/ostest1/: pctl.c
cryptography/: CMakeLists.txt  casear.cpp  main.cpp  transposition_cipher.h  vigenere.cpp
csptest/: 2.cpp  201512-3.cpp  201604-3.cpp  201609-3.cpp  201809-3.cpp  3.cpp  CMakeLists.txt  csp-M2-1.cpp  csp-M2-3.cpp  csp-M3-1.cpp  csp-M3-2.cpp  csp-M5-1.cpp  csp-M5-2.cpp  csp-M5-3.cpp  csp-M5-4.cpp  csp-M5-5.cpp  csp-M5-6.cpp  csp-M7-1.cpp  csp-M7-2.cpp  csp-M7-3.cpp  csp-M7-4.cpp  csp-M7-5.cpp  csp=M2-2.cpp  csptest.cpp  main.cpp  sdu-csp-M3-1.cpp  sdu-csp-M3-2.cpp  sdu-csp-M3-3.cpp  sdu-csp-m4-2.cpp  sdu-csp-m4-3.cpp  sdu-csp-m4.cpp  week14-test-1.cpp  week6.cpp
homework/: CMakeLists.txt  homework10-1.cpp  homework10-2.cpp  homework10-3.cpp  homework11-1.cpp  homework11-2.cpp  homework11-3.cpp  homework11-4.cpp  homework11-5.cpp  homework11-6.cpp  homework12-1.cpp  homework12-2.cpp  homework12-3.cpp  homework12-4.cpp  homework12-5.cpp  homework13-1.cpp  homework13-2.cpp  homework13-3.cpp  homework13-4.cpp  homework13-5.cpp  homework14-1.cpp  homework14-2.cpp  homework14-3.cpp  homework14-4.cpp  homework15-1.cpp  homework15-2.cpp  homework3-1.cpp  homework3-2.cpp  homework3-3.cpp  homework4-1.cpp  homework4-2.cpp  homework4-3.cpp  homework5-1.cpp  homework5-2.cpp  homework5-3.cpp  homework5-4.cpp  homework6-1.cpp  homework6-2.cpp  homework6-3.cpp  homework6-4.cpp  (+14 more)
openmp/: CMakeLists.txt  main.cpp
untitled1/: CMakeLists.txt  id.cpp  main.cpp
week2homework/: CMakeLists.txt  main.cpp
