cmake_minimum_required(VERSION 3.15)
project(csptest)

set(CMAKE_CXX_STANDARD 11)

add_executable(csptest main.cpp 2.cpp 3.cpp 201512-3.cpp week6.cpp csp-M2-1.cpp csp=M2-2.cpp csp-M2-3.cpp csptest.cpp 201604-3.cpp csp-M3-1.cpp csp-M3-2.cpp 201609-3.cpp sdu-csp-M3-1.cpp sdu-csp-M3-2.cpp sdu-csp-M3-3.cpp csp-M5-1.cpp csp-M5-3.cpp csp-M5-5.cpp csp-M5-2.cpp csp-M5-4.cpp csp-M5-6.cpp week14-test-1.cpp csp-M7-1.cpp csp-M7-2.cpp csp-M7-3.cpp csp-M7-4.cpp csp-M7-5.cpp sdu-csp-m4.cpp sdu-csp-m4-2.cpp sdu-csp-m4-3.cpp 201809-3.cpp)