cmake_minimum_required(VERSION 3.15)
project(homework)

set(CMAKE_CXX_STANDARD 14)

add_executable(homework main.cpp homework3-1.cpp shiyan2-1.cpp shiyan2-2.cpp shiyan2-3.cpp homework3-2.cpp homework3-3.cpp homework4-1.cpp homework4-2.cpp homework4-3.cpp homework5-1.cpp homework5-2.cpp homework5-3.cpp homework5-4.cpp homework6-1.cpp homework6-2.cpp homework6-3.cpp homework6-4.cpp homework7-1.cpp homework7-2.cpp homework7-3.cpp homework8-1.cpp homework8-2.cpp homework8-3.cpp homework9-2.cpp homework9-3.cpp homework9-1.cpp homework10-1.cpp homework10-2.cpp homework10-3.cpp homework11-1.cpp homework11-2.cpp homework11-3.cpp homework11-4.cpp homework11-5.cpp homework11-6.cpp homework12-1.cpp homework12-2.cpp homework12-3.cpp homework12-4.cpp homework12-5.cpp homework13-1.cpp homework13-2.cpp homework13-3.cpp homework13-4.cpp homework13-5.cpp homework14-1.cpp homework14-2.cpp homework14-3.cpp homework14-4.cpp homework15-1.cpp homework15-2.cpp trys.cpp)